fix: transition duration and dark mode opacity

--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,7 @@ a.active {
 .nes-ui-input {
   border-radius: 0 !important;
 }
+
+.nes-ui-dark-mode .nes-ui-pixel-border-2 {
+  filter: opacity(0.7);
+}
